--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
+            "args": ["embed", "bitmapPath", "sourceData", "destinationBitmap", "3"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
