--- a/.github/workflows/CPP-build.yml
+++ b/.github/workflows/CPP-build.yml
@@ -12,9 +12,10 @@ env:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest] # we build on GitHub-provided Windows and Linux images
+    runs-on: ${{ matrix.os }} # use value from the matrix
     steps:
     - uses: actions/checkout@v4
     - name: Configure CMake
